<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="show_additional_fields">Show Additional Fields</string>
    <string name="hide_additional_fields">Hide Additional Fields</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="job_title">Job Title</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="IM">IM</string>
    <string name="phone_error">Phone number received from intent is null!</string>
</resources>